--- a/ui/html/footer.partial.tmpl
+++ b/ui/html/footer.partial.tmpl
@@ -1,3 +1,3 @@
 {{define "footer"}}
-    <footer>Powered by <a href='https://go.dev'>Go</a></footer>
+    <footer>Powered by <a href='https://go.dev'>Go</a> in {{.CurrentYear}}</footer>
 {{end}}
