--- a/ui/html/show.page.tmpl
+++ b/ui/html/show.page.tmpl
@@ -13,8 +13,8 @@
         <pre><code>{{.Content}}</code></pre> 
 
         <div class='metadata'>
-            <time>Created: {{.Created}}</time>
-            <time>Expires: {{.Expires}}</time> 
+            <time>Created: {{humanDate .Created}}</time>
+            <time>Expires: {{humanDate .Expires}}</time> 
         </div>
     </div>
     {{end}}
