--- a/ui/html/create.page.tmpl
+++ b/ui/html/create.page.tmpl
@@ -6,17 +6,27 @@
     <form action='/snippet/create' method='POST'>
         <div>
             <label>Title:</label>
-            <input type='text' name='title'>
+            {{with .FormErrors.title}}
+                <label class='error'>{{.}}</label>
+            {{end}}
+            <input type='text' name='title' value='{{.FormData.Get "title"}}'>
         </div>
         <div>
             <label>Content:</label>
-            <textarea name='content'></textarea>
+            {{with .FormErrors.content}}
+                <label class='error'>{{.}}</label>
+            {{end}}
+            <textarea name='content'>{{.FormData.Get "content"}}</textarea>
         </div>
         <div>
             <label>Delete in:</label>
-            <input type='radio' name='expires' value='365' checked> One year
-            <input type='radio' name='expires' value='7'> One week
-            <input type='radio' name='expires' value='1'> One day
+            {{with .FormErrors.expires}}
+                <label class='error'>{{.}}</label>
+            {{end}}
+            {{$exp := or (.FormData.Get "expires") "365"}}
+            <input type='radio' name='expires' value='365' {{if (eq $exp "365")}}checked{{end}}> One year
+            <input type='radio' name='expires' value='7' {{if (eq $exp "7")}}checked{{end}}> One week
+            <input type='radio' name='expires' value='1' {{if (eq $exp "1")}}checked{{end}}> One day
         </div>
         <div>
             <input type='submit' value='Publish snippet'>
