Show flash messages if they are available

--- a/ui/html/create.page.tmpl
+++ b/ui/html/create.page.tmpl
@@ -2,7 +2,7 @@
 
 {{define "title"}}Create a new snippet{{end}}
 
-{{define "body"}}
+{{define "main"}}
     <form action='/snippet/create' method='POST'>
         {{with .Form}}
             <div>
