--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -2,7 +2,7 @@
 
 {{define "title"}}Home{{end}}
 
-{{define "body"}}
+{{define "main"}}
     <h2>Latest Snippets</h2>
     {{if .Snippets}}
         <table>
