--- a/ui/html/show.page.tmpl
+++ b/ui/html/show.page.tmpl
@@ -2,7 +2,7 @@
 
 {{define "title"}}Snippet #{{.Snippet.ID}}{{end}}
 
-{{define "body"}}
+{{define "main"}}
     {{with .Snippet}}
     <div class='snippet'>
         <div class='metadata'> 
