--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -16,9 +16,12 @@
             <a href='/'>Home</a>
             <a href='/snippet/create'>Create snippet</a>
         </nav>
-        <section>
-            {{template "body" .}}
-        </section>
+        <main>
+            {{with .Flash}}
+                <div class='flash'>{{.}}</div>
+            {{end}}
+            {{template "main" .}}
+        </main>
         {{template "footer" .}}
 
         <script src="/static/js/main.js" type="text/javascript"></script>
